@@ -4,7 +4,7 @@ class RemoteQuickpayV6Test < Test::Unit::TestCase
   # These test assumes that you have not added your development IP in
   # the Quickpay Manager.
   def setup
-    @gateway = QuickpayGateway.new(fixtures(:quickpay_with_api_key).merge(:version => 6))
+    @gateway = QuickpayGateway.new(fixtures(:quickpay_with_api_key))
 
     @amount = 100
     @options = {
